--- a/Simulator/css/beta.css
+++ b/Simulator/css/beta.css
@@ -121,7 +121,7 @@ main {
 #sim-panel {
     /* background: #2c2c2c; */
     border-radius: 4px;
-    padding-top: 24px;
+    padding-top: 22px;
     font-family: 'Digital-7 Mono', 'Share Tech Mono', monospace;
     z-index: 10;
     border-bottom: 1px solid #333;
@@ -136,7 +136,7 @@ main {
 }
 #sim-clock {
     font-size: 1.8rem;
-    padding-bottom: 20px;
+    padding-bottom: 17px;
 }
 .sim-control-btn {
     flex-direction: column;
@@ -148,6 +148,10 @@ main {
     position: relative;
     border-right: 1px solid #333;
     padding: 8px 0;
+}
+
+.sim-control-btn:hover {
+    background-color: #1f1f1f;
 }
 
 #btn-scen {
