Add track controls and tooltips

--- a/Simulator/css/beta.css
+++ b/Simulator/css/beta.css
@@ -134,6 +134,14 @@ main {
     border-top:1px solid #333;
     font-size: 1.35rem;
 }
+#trk-controls {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+    border-top:1px solid #333;
+    font-size: 1.35rem;
+}
 #sim-clock {
     font-size: 1.8rem;
     padding-bottom: 17px;
@@ -155,7 +163,11 @@ main {
 }
 
 #btn-scen {
-    padding: 10px 0
+    padding: 10px 0;
+    flex: 0 0 50%;
+}
+#btn-rev, #btn-ff, #btn-drop-trk, #btn-add-trk {
+    flex: 0 0 25%;
 }
 #btn-rev, #btn-ff {
     flex: 0 0 25%;
@@ -184,7 +196,7 @@ main {
 }
 .control-btn svg { width: 1em; height: 1em; }
 /* Instant tooltip styling using data-tooltip attribute */
-.control-btn[data-tooltip]::after {
+[data-tooltip]::after {
     content: attr(data-tooltip);
     position: absolute;
     top: 10%;
@@ -202,7 +214,7 @@ main {
     opacity: 0;
     transition: opacity 0.1s ease-in-out;
 }
-.control-btn[data-tooltip]:hover::after {
+[data-tooltip]:hover::after {
     opacity: 1;
 }
 .control-btn.unselected {
@@ -298,11 +310,6 @@ main {
     outline: none;
 }
 #data-pane .mt-2 { margin-top: 0.25rem !important; }
-#btn-add-track,
-#btn-drop-track {
-    font-size: 32px;
-    line-height: 1;
-}
 
 /* Let the radar fill the middle, and center its contents
 #radar {
