Use number input for editable fields

--- a/Simulator/css/beta.css
+++ b/Simulator/css/beta.css
@@ -273,6 +273,7 @@ main {
     color: var(--radar-green);
     border: none;
     text-align: right;
+    cursor: text;
     font-size: inherit;
     font-family: inherit;
     width: 100%;
