--- a/Simulator/css/beta.css
+++ b/Simulator/css/beta.css
@@ -285,6 +285,7 @@ main {
 #btn-drop-track {
     width: 32px;
     height: 32px;
+    margin-left: 5px;
     font-family: 'Share Tech Mono', monospace;
     font-size: 28px;
     color: var(--radar-faint-green);
