--- a/Simulator/css/beta.css
+++ b/Simulator/css/beta.css
@@ -482,3 +482,81 @@ details[open] > summary.collapsible-summary::before {
 #track-id {
     font-size: 22px;
 }
+
+/* Settings Drawer */
+#settings-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+#btn-settings {
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    border: none;
+    background: transparent;
+    color: var(--radar-faint-green);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#btn-settings:hover {
+    color: var(--radar-green);
+    cursor: pointer;
+}
+
+#btn-settings svg { width: 100%; height: 100%; }
+
+#settings-drawer {
+    position: fixed;
+    left: 32px;
+    bottom: 35px;
+    width: 60px;
+    background: #000;
+    border: 1px solid #333;
+    padding: 6px;
+    gap: 4px;
+    color: var(--radar-green);
+    display: none;
+    z-index: 10;
+}
+
+.toggle {
+    font-size: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.toggle input {
+    appearance: none;
+    width: 28px;
+    height: 14px;
+    background: var(--radar-faint-green);
+    border-radius: 14px;
+    position: relative;
+    outline: none;
+    cursor: pointer;
+}
+
+.toggle input::before {
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #000;
+    top: 1px;
+    left: 1px;
+    transition: transform 0.2s ease;
+}
+
+.toggle input:checked {
+    background: var(--radar-green);
+}
+
+.toggle input:checked::before {
+    transform: translateX(14px);
+}
